# Mental_krisis_app

./: AndroidManifest.xml.in  CMakeLists.txt  Main.qml  main.cpp
